# cpp26-modular-tgbot

./: .clangd  .gitignore  CMakeLists.txt  README.md
Lib_Clicker/: CMakeLists.txt
Lib_Clicker/src/: Clicker.cpp  Clicker.cppm  Lib_Clicker.cpp  Lib_Clicker.cppm
Lib_Module/: CMakeLists.txt
Lib_Module/src/: Example_Reflection.cpp  Example_Reflection.cppm  Lib_Module.cpp  Lib_Module.cppm  Lib_Module_Concepts.cpp  Lib_Module_Concepts.cppm  Lib_Module_Reflection.cpp  Lib_Module_Reflection.cppm  Module_Math.cpp  Module_Math.cppm
Lib_TGBot/: CMakeLists.txt
Lib_TGBot/src/: Lib_TGBot.cpp  Lib_TGBot.cppm  TGB_Bot_API.cpp  TGB_Bot_API.cppm  TGB_Data.cpp  TGB_Data.cppm  TGB_Deserializer.cpp  TGB_Deserializer.cppm  TGB_Dispatcher.cpp  TGB_Dispatcher.cppm  TGB_Manager.cpp  TGB_Manager.cppm  TGB_Network.cpp  TGB_Network.cppm  TGB_Parser.cpp  TGB_Parser.cppm
app/: CMakeLists.txt
app/include/: main.h
app/src/: Test.cppm  main.cpp
